# test_project

./: CMakeLists.txt  README.md  prj.conf
logs/: callstack_before_hardfault.txt  log.txt
src/: main.c
utils/: board_connect.sh  test_conn.py
